_build/_log
### Starting build.
# Target: test.ml.depends, tags: { package(oUnit), debug, extension:ml, file:test.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -modules test.ml > test.ml.depends
# Target: Blackjack.mli.depends, tags: { package(oUnit), debug, extension:mli, file:Blackjack.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -modules Blackjack.mli > Blackjack.mli.depends # cached
# Target: Cards.mli.depends, tags: { package(oUnit), debug, extension:mli, file:Cards.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -modules Cards.mli > Cards.mli.depends # cached
# Target: Cards.cmi, tags: { package(oUnit), byte, compile, debug, extension:mli, file:Cards.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -package oUnit -o Cards.cmi Cards.mli # cached
# Target: Chip.mli.depends, tags: { package(oUnit), debug, extension:mli, file:Chip.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -modules Chip.mli > Chip.mli.depends # cached
# Target: Chip.cmi, tags: { package(oUnit), byte, compile, debug, extension:mli, file:Chip.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -package oUnit -o Chip.cmi Chip.mli # cached
# Target: Command.mli.depends, tags: { package(oUnit), debug, extension:mli, file:Command.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -modules Command.mli > Command.mli.depends # cached
# Target: Command.cmi, tags: { package(oUnit), byte, compile, debug, extension:mli, file:Command.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -package oUnit -o Command.cmi Command.mli # cached
# Target: Player.mli.depends, tags: { package(oUnit), debug, extension:mli, file:Player.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -modules Player.mli > Player.mli.depends # cached
# Target: Player.cmi, tags: { package(oUnit), byte, compile, debug, extension:mli, file:Player.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -package oUnit -o Player.cmi Player.mli # cached
# Target: Blackjack.cmi, tags: { package(oUnit), byte, compile, debug, extension:mli, file:Blackjack.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -package oUnit -o Blackjack.cmi Blackjack.mli # cached
# Target: test.cmo, tags: { package(oUnit), byte, compile, debug, extension:cmo, extension:ml, file:test.cmo, file:test.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -package oUnit -o test.cmo test.ml
+ ocamlfind ocamlc -c -g -package oUnit -o test.cmo test.ml
File "test.ml", line 286, characters 27-47:
286 |                           (game_with_dealer_bad |> Blackjack.dealer));
                                 ^^^^^^^^^^^^^^^^^^^^
Error: Unbound value game_with_dealer_bad
Command exited with code 2.
# Compilation unsuccessful.
